<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlphaRun</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bkName">Name</string>
    <string name="bkNameSub">Description</string>
    <string name="bkURL">URL</string>
    <string name="bkURLSub">URL to launch</string>
    <string name="bkUID">UID</string>
    <string name="bkUIDSub">Optional unique text value</string>
    <string name="bkScan">Scan Button</string>
    <string name="bkScanSub">Lets you update URL from bookmark list</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_del">Delete</string>
    <string name="menu_move">Move</string>
    <string name="contentDescription">content</string>
    
    <string name="pref_title">GardenWeb Settings</string>
    <string name="pref_general_title">General Settings</string>
    <string name="pref_touch">Touch Highlighting</string>
    <string name="pref_status_bar">Status Bar</string>
    <string name="pref_toolbar_btn">Toolbar Button</string>
    <string name="pref_toolbar_btn_sub">Change on main preferences to see again</string>
    <string name="pref_phonegap">Use PhoneGap/Cordova</string>
    <string name="pref_phonegap_sub">See Help</string>
    <string name="pref_cookies">Cookies</string>
    <string name="pref_cookies_sub"></string>
    <string name="pref_log_file">Log File</string>
    <string name="pref_log_file_sub"></string>
    <string name="pref_log_errors">Log errors</string>
    <string name="pref_clear_cache">Clear Browser Cache</string>
    <string name="pref_clear_cache_sub"></string>
    
    <string name="pref_url_variable">URL Variable</string>
    <string name="pref_url_variable_sub">Use [[v1]] to insert</string>
    <string name="pref_javascript">JavaScript</string>
    <string name="pref_javascript_sub">For programming use only</string>
    <string name="pref_javascript_past_sub">Select one and it will fill the Javascript field.</string>
    <string name="pref_javascript_past">Previous JS commands list.</string>
    
    <string name="pref_help">Help</string>
    <string name="pref_about">About</string>
    <string name="pref_about_sub">Version 1.0; Copyright 2013 Alpha Software Corporation.</string>
    <string name="editingEmptyList">Editing Empty List</string>
    <string name="editingEmptyList_sub">Use the + button above to add a bookmark</string>
    <string name="startupHelp">Click for startup Help</string>
    <string name="startupHelp_sub">Full help and preferences may be accessed by pressing the wrench button</string>

</resources>