<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="100sp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/Header"
            android:paddingLeft="10sp"
            android:paddingRight="10sp" >


            <ImageButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancelBtnClick"
                android:src="@drawable/ic_menu_close_clear_cancel" 
                android:contentDescription="TODO"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <ImageButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveBtnClick"
                android:src="@drawable/ic_menu_save"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bkName"
                        android:textSize="@dimen/bigSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textNameDescr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bkNameSub"
                        android:textSize="@dimen/smallSize" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTitle"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    tools:ignore="TextFields" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textURL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bkURL"
                        android:textSize="@dimen/bigSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textURLDescr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bkURLSub"
                        android:textSize="@dimen/smallSize" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editURL"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:inputType="textUri"
                    tools:ignore="TextFields" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textUID"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bkUID"
                        android:textSize="@dimen/bigSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textUIDDescr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bkUIDSub"
                        android:textSize="@dimen/smallSize" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editUID"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textScan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/bkScan"
                        android:textSize="@dimen/bigSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textScanDescr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bkScanSub"
                        android:textSize="@dimen/smallSize" />
                </LinearLayout>

                <Switch
                    android:id="@+id/swScan"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp" >

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scanBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/scan2x"
                    android:onClick="scanBtnClick"
                    android:text=" Scan QR code URL" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>